--- a/livingExpenseRecord/app/src/main/AndroidManifest.xml
+++ b/livingExpenseRecord/app/src/main/AndroidManifest.xml
@@ -10,15 +10,19 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".RecordActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".finalRecordActivity">
-
+        <activity
+            android:name=".finalRecordActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".RecordActivity"/>
         </activity>
     </application>
 
