--- a/livingExpenseRecord/build.gradle
+++ b/livingExpenseRecord/build.gradle
@@ -15,6 +15,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+    }
+    repositories {
         maven { url "https://jitpack.io" }
     }
 }
